@startuml
'https://plantuml.com/class-diagram

abstract class House
abstract class HouseBuilder
class CommonHouseBuilder
class highBuildingBuilder
class OtherBuilder
class HouseDirector
class Client

House *- HouseBuilder

HouseBuilder <|-- CommonHouseBuilder
HouseBuilder <|-- highBuildingBuilder
HouseBuilder <|-- OtherBuilder

HouseBuilder o- HouseDirector

CommonHouseBuilder <.. Client
highBuildingBuilder <.. Client
HouseDirector <.. Client

class HouseBuilder {
house: House

buildBasic(): void
buildWall(): void
roofed(): void
construct(): void

}

class HouseDirector {
houseBuilder: HouseBuilder
deliver(): void
}

@enduml